add endpoint average grade
