# swagger_server/swagger/swagger.yaml
@@ -68,6 +68,35 @@ paths:
         "404":
           description: Student with specified student_id cannot be found
       x-openapi-router-controller: swagger_server.controllers.default_controller
+  /student/{student_id}/average_grade:
+    get:
+      summary: get average grade of the student
+      description: Returns the average grade for a specific student
+      operationId: get_student_average_grade
+      parameters:
+        - name: student_id
+          in: path
+          description: the uid
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: number
+                format: float
+                example: 8.5
+        "400":
+          description: Invalid ID
+        "404":
+          description: Not found
+      x-openapi-router-controller: swagger_server.controllers.default_controller
   /student:
     post:
       summary: Add a new student
